update before rebuild.sh